[tool.poetry]
name = "ndradex"
version = "0.2.1"
description = "Python package for RADEX grid calculation"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
astropy = "^4.0"
astroquery = "^0.4"
netcdf4 = "^1.5"
numpy = "^1.18"
pandas = ">=0.25, <1.2"
toml = "^0.10"
tqdm = "^4.41"
xarray = "^0.15"

[tool.poetry.dev-dependencies]
black = "^20.8b"
flake8 = "^3.8"
ipython = "^7.16"
ipykernel = "^5.3"
pytest = "^6.0"
twine = "^3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
