[tool.poetry]
name = "ndradex"
version = "0.3.0"
description = " Multidimensional grid RADEX calculator"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
keywords = ["astronomy", "radio-astronomy", "radex"]
license = "MIT"
homepage = "https://github.com/astropenguin/ndradex/"
documentation = "https://astropenguin.github.io/ndradex/"

[tool.poetry.dependencies]
python = ">3.8, <3.12"
astropy = "^5.0"
astroquery = "^0.4"
netcdf4 = "^1.6"
numpy = "^1.22"
pandas = "^1.5"
pandas-stubs = "^1.5"
tomlkit = "^0.11"
tqdm = "^4.60"
typing-extensions = "^4.0"
xarray = "^2022.1"

[tool.poetry.dev-dependencies]
black = "^23.3"
ipython = "^8.12"
myst-parser = "^1.0"
pydata-sphinx-theme = "^0.13"
pytest = "^7.3"
sphinx = "^6.2"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
