[project]
name = "ndradex"
version = "0.3.1"
description = " Multidimensional RADEX calculator"
readme = "README.md"
keywords = ["astronomy", "radio-astronomy", "radex", "xarray"]
requires-python = ">=3.10,<3.14"
dependencies = [
    "astropy>=6,<8",
    "astroquery>=0.4,<1.0",
    "numpy>=2,<3",
    "pandas>=2,<3",
    "pandas-stubs>=2,<3",
    "requests-cache>=1,<2",
    "tomlkit>=0.10,<1.0",
    "tqdm>=4,<5",
    "typing-extensions>=4,<5",
    "xarray>=2022,<2026",
    "xarray-dataclasses>=1,<2",

]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[[project.authors]]
name = "Akio Taniguchi"
email = "taniguchi.akio@gmail.com"

[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://astropenguin.github.io/ndradex"
repository = "https://github.com/astropenguin/ndradex"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25,<26",
    "ipython>=8,<10",
    "myst-parser>=3,<5",
    "pydata-sphinx-theme>=0.15,<1.0",
    "pyright>=1,<2",
    "pytest>=8,<9",
    "sphinx>=7,<9",
]

[tool.pyright]
typeCheckingMode = "basic"
