[metadata]
name = ndradex
version = 0.1.8
author = astropenguin
author_email = taniguchi@a.phys.nagoya-u.ac.jp
url = https://github.com/astropenguin/ndradex
description = Python package for RADEX grid calculation
long_description = file:README.md
long_description_content_type = text/markdown
keywords = radio-astronomy, python, radex, xarray
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = ndradex
python_requires = >=3.6
include_package_data = True
install_requires =
    numpy
    pandas
    xarray
    netcdf4
    matplotlib
    toml
    tqdm
    astropy
    astroquery
