[metadata]
name = ndradex
version = 0.2.1
author = astropenguin
author_email = taniguchi@a.phys.nagoya-u.ac.jp
url = https://github.com/astropenguin/ndradex
description = Python package for RADEX grid calculation
long_description = file:README.md
long_description_content_type = text/markdown
keywords = radio-astronomy, python, radex, xarray
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = ndradex
python_requires = >=3.6
include_package_data = True
install_requires =
    astropy >=4.0,<5.0
    astroquery >=0.4,<0.5
    netcdf4 >=1.5,<2.0
    numpy >=1.18,<2.0
    pandas >=0.25,<1.2
    toml >=0.10,<0.11
    tqdm >=4.41,<5.0
    xarray >=0.15,<0.16
